# QRemeshify-rs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  blender_manifest.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
QRemeshify/: __init__.py  blender_manifest.toml  operator.py  props.py
QRemeshify/lib/: __init__.py
QRemeshify/rust_ext/: __init__.py
QRemeshify/util/: bisect.py  exporter.py  importer.py  mesh_classifier.py
qremeshify_rs/: Cargo.toml  README.md  build.rs  pyproject.toml
qremeshify_rs/src/: lib.rs  obj_io.rs  sharp_detection.rs  validation.rs
